--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Natasha Google Search</title>
+  <title>Youtube</title>
   <style>
       
       input[type="text"] {
